--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,17 @@
 <BODY>
     <HEADer>
         <h1>Toda La Moda Un Solo Lugar</h1>
+
+        <img width="800" height="600" src="/FOTOS/modelos posando.jpg" alt="Modelos posando">
     </HEADer>
-    <H1>Categorias</H1>
+    <H2>Categorias</H2>
+    <a href="/Hombre.html">HOMBRE</a>
+
+    <a href="/Mujer.html">MUJER</a>
     
+    <A href="/Niño.html">NIÑO</A>
+
+
 
 
 </BODY>
