Cambie nombre link 1.

--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,15 @@
 </HEAD>
 <BODY>
     <HEADer>
-        <h1>Toda La Moda Un Solo Lugar</h1>
+        <h1>Toda La Moda Un Solo Lugar.</h1>
 
         <img width="800" height="600" src="/FOTOS/modelos posando.jpg" alt="Modelos posando">
     </HEADer>
     <H2>Categorias</H2>
-    <a href="/Hombre.html">HOMBRE</a>
+    <a href="/Hombre.html">Hombre</a>
 
     <a href="/Mujer.html">MUJER</a>
-    
+
     <A href="/Niño.html">NIÑO</A>
 
 
