Agregue fotter y nombre a los pies de pagina.

--- a/Index.html
+++ b/Index.html
@@ -12,11 +12,14 @@
     <H2>Categorias</H2>
     <a href="/Hombre.html">Hombre</a>
 
-    <a href="/Mujer.html">MUJER</a>
+    <a href="/Mujer.html">Mujer</a>
 
-    <A href="/Niño.html">NIÑO</A>
+    <A href="/Niño.html">Niños</A>
 
 
 
+<footer>
+    <b><u><i>Realizado Por Tomas Merlo</i></u>.</b>
+</footer>
 
 </BODY>
