Se linkearon todas las pestañas con ellas mismas.

--- a/Mujer.html
+++ b/Mujer.html
@@ -4,9 +4,12 @@
 </head>
 <body>
 <img width="800" height="600" src="/FOTOS/mujeres caminado.jpg" alt="mujeres caminado">
-<header>Mujer</header>
+<header><h1>MUJER</h1></header>
 <h3>Ropa</h3>
 <h3>Calzado</h3>
 <h3>Accesorios</h3>
 <a href="/Index.html">Home</a>
+<footer>
+    <b><u><i>Realizado Por Tomas Merlo</i></u>.</b>
+</footer>
 </body>
