--- a/Niño.html
+++ b/Niño.html
@@ -4,9 +4,10 @@
 </HEAD>
 <BODY>
     <img width="800" height="600" src="/FOTOS/niños ropa.jpg" alt="Niños posando">
-    <h1>Niñe</h1>
+    <header><h1>Niñe</h1></header>
     <h3>Ropa</h3>
     <h3>Calzado</h3>
     <h3>Accesorios</h3>
     <a href="/Index.html">Home</a>
+    <footer><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
 </BODY>
