--- a/Hombre.html
+++ b/Hombre.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<head>
-    <TITLe>Hombre</TITLe>
-</head>
+<HEAd><title>Hombre</title></HEAd>
 <body>
     <img width="800" height="600"   src="FOTOS/foto hombres caminando.jpg" alt="El hombre de hoy">
     <header><h1>HOMBRE</h1></header>
     <H3>Ropa</H3>
     <h3>Calzado</h3>
     <h3>Accesorios</h3>
-    <a href="./Index.html">Home</a>
+    <a href="/Index.html">Home</a>
+    <footer><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
 </body>
