Cambios de links y arreglos.

--- a/Hombre.html
+++ b/Hombre.html
@@ -2,10 +2,15 @@
 <HEAd><title>Hombre</title></HEAd>
 <body>
     <img width="800" height="600"   src="FOTOS/foto hombres caminando.jpg" alt="El hombre de hoy">
-    <header><h1>HOMBRE</h1></header>
+    <header><h1><U>HOMBRE</U></h1></header>
     <H3>Ropa</H3>
     <h3>Calzado</h3>
     <h3>Accesorios</h3>
+    <UL>
+        <li><a href="/Mujer.html">Mujer</a></li>
+        <li><a href="/Niño.html">Niños</a></li>
+    </UL>
+    
     <a href="/Index.html">Home</a>
     <footer><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
 </body>
