--- a/Mujer.html
+++ b/Mujer.html
@@ -4,10 +4,14 @@
 </head>
 <body>
 <img width="800" height="600" src="/FOTOS/mujeres caminado.jpg" alt="mujeres caminado">
-<header><h1>MUJER</h1></header>
+<header><h1><u>MUJER</u></h1></header>
 <h3>Ropa</h3>
 <h3>Calzado</h3>
 <h3>Accesorios</h3>
+<ul>
+    <li><a href="/Hombre.html">Hombre</a></li>
+    <li><a href="/Niño.html">Niños</a></li>
+</ul>
 <a href="/Index.html">Home</a>
 <footer>
     <b><u><i>Realizado Por Tomas Merlo</i></u>.</b>
