--- a/Niño.html
+++ b/Niño.html
@@ -4,10 +4,14 @@
 </HEAD>
 <BODY>
     <img width="800" height="600" src="/FOTOS/niños ropa.jpg" alt="Niños posando">
-    <header><h1>Niñe</h1></header>
+    <header><h1><u>NIÑOS</u></h1></header>
     <h3>Ropa</h3>
     <h3>Calzado</h3>
     <h3>Accesorios</h3>
+    <ul>
+        <li><a href="/Hombre.html">Hombre</a></li>
+        <li><a href="/Mujer.html">Mujer</a></li>
+    </ul>
     <a href="/Index.html">Home</a>
     <footer><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
 </BODY>
