--- a/Index.html
+++ b/Index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<HEAD>
-<TITle>Tienda Online </TITle>
+<head>
+  <title>Tienda Online</title>
+  <link rel="stylesheet" href="/Estilos pagina.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+    rel="stylesheet"
+  />
+</head>
+<body>
+  <header>
+    <h1 class="titulo">Toda La Moda Un Solo Lugar.</h1>
 
-</HEAD>
-<BODY>
-    <HEADer>
-        <h1>Toda La Moda Un Solo Lugar.</h1>
+    <img
+      width="788"
+      height="600"
+      src="/FOTOS/modelos posando.jpg"
+      alt="Modelos posando"
+    />
+  </header>
+  <h2>Categorias</h2>
+  <a href="/Hombre.html">Hombre</a>
 
-        <img width="800" height="600" src="/FOTOS/modelos posando.jpg" alt="Modelos posando">
-    </HEADer>
-    <H2>Categorias</H2>
-    <a href="/Hombre.html">Hombre</a>
+  <a href="/Mujer.html">Mujer</a>
 
-    <a href="/Mujer.html">Mujer</a>
+  <a href="/Niño.html">Niños</a>
 
-    <A href="/Niño.html">Niños</A>
-
-
-
-<footer>
-    <b><u><i>Realizado Por Tomas Merlo</i></u>.</b>
-</footer>
-
-</BODY>
+  <footer>
+    <b
+      ><u><i>Realizado Por Tomas Merlo</i></u
+      >.</b
+    >
+  </footer>
+</body>
