--- a/Index.html
+++ b/Index.html
@@ -10,26 +10,27 @@
 </head>
 <body>
   <header>
-    <h1 class="titulo">Toda La Moda Un Solo Lugar.</h1>
+    <h1 class="Titulo principal"><u>Toda La Moda Un Solo Lugar</u></h1>
 
-    <img
-      width="788"
-      height="600"
+    <img class="FOTOS"
+      width="1500"
+      height="1000"
       src="/FOTOS/modelos posando.jpg"
       alt="Modelos posando"
     />
   </header>
-  <h2>Categorias</h2>
-  <a href="/Hombre.html">Hombre</a>
 
-  <a href="/Mujer.html">Mujer</a>
+  <div class="secciones">
+    <u><h3>Categorias</h3></u>
 
-  <a href="/Niño.html">Niños</a>
+    <a class="secciones" href="/Hombre.html">Hombre</a>
+
+    <a class="secciones" href="/Mujer.html">Mujer</a>
+
+    <a class="secciones" href="/Niño.html">Niños</a>
+  </div>
 
   <footer>
-    <b
-      ><u><i>Realizado Por Tomas Merlo</i></u
-      >.</b
-    >
+    <b><u><i class="Realizado">Realizado Por Tomas Merlo</i></u</b>
   </footer>
 </body>
