Se cambiaron paletas de colores y aliniaron listas.

--- a/Index.html
+++ b/Index.html
@@ -22,15 +22,18 @@
 
   <div class="secciones">
     <u><h3>Categorias</h3></u>
+    <ul>
 
-    <a class="secciones" href="/Hombre.html">Hombre</a>
+    <br><li><a class="secciones" href="/Hombre.html">Hombre</a></li>
 
-    <a class="secciones" href="/Mujer.html">Mujer</a>
+    <br><li><a class="secciones" href="/Mujer.html">Mujer</a></li>
 
-    <a class="secciones" href="/Niño.html">Niños</a>
+    <br><li><a class="secciones" href="/Niño.html">Niños</a></li>
+  </ul>
   </div>
 
   <footer>
-    <b><u><i class="Realizado">Realizado Por Tomas Merlo</i></u</b>
+    <br><br><b><u><i class="Realizado">Realizado Por Tomas Merlo</i></u</b>
   </footer>
+
 </body>
