Cambio de foto y recuadro

--- a/Index.html
+++ b/Index.html
@@ -13,15 +13,16 @@
     <h1 class="Titulo principal"><u>Toda La Moda Un Solo Lugar</u></h1>
 
     <img class="FOTOS"
-      width="1500"
-      height="1000"
-      src="/FOTOS/modelos posando.jpg"
+      width="1000"
+      height="700"
+      src="/FOTOS/modelos mujeres.jpg"
       alt="Modelos posando"
     />
   </header>
 
   <div class="secciones">
-    <u><h3>Categorias</h3></u>
+
+    <br><u><h3>Categorias</h3></u>
     <ul>
 
     <br><li><a class="secciones" href="/Hombre.html">Hombre</a></li>
