--- a/Html/Index.html
+++ b/Html/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Tienda Online</title>
-  <link rel="stylesheet" href="/Estilos pagina.css" />
+  <link rel="stylesheet" href="/Css/Estilos pagina.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
@@ -24,12 +24,11 @@
 
     <br><u><h3>Categorias</h3></u>
     <ul>
+    <br><li><a class="secciones" href="/Html/Hombre.html">Hombre</a></li>
 
-    <br><li><a class="secciones" href="/Hombre.html">Hombre</a></li>
+    <br><li><a class="secciones" href="/Html/Mujer.html">Mujer</a></li>
 
-    <br><li><a class="secciones" href="/Mujer.html">Mujer</a></li>
-
-    <br><li><a class="secciones" href="/Niño.html">Niños</a></li>
+    <br><li><a class="secciones" href="/Html/Niño.html">Niños</a></li>
   </ul>
   </div>
 
