--- a/Html/Mujer.html
+++ b/Html/Mujer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" href="/Css/Mujer.css">
   <title>Mujer</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
   <h3>Calzado</h3>
   <h3>Accesorios</h3>
   <ul>
-    <li><a href="/Hombre.html">Hombre</a></li>
-    <li><a href="/Niño.html">Niños</a></li>
+    <li><a href="/Html/Hombre.html">Hombre</a></li>
+    <li><a href="/Html/Niño.html">Niños</a></li>
   </ul>
-  <a href="/Index.html">Home</a>
+  <a href="/Html/Index.html">Home</a>
   <footer>
     <b
       ><u><i>Realizado Por Tomas Merlo</i></u
