--- a/Html/Hombre.html
+++ b/Html/Hombre.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <HEAd>
     <link rel="stylesheet" href="/Css/Hombre.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+    rel="stylesheet"
+  />
     <title>Hombre</title></HEAd>
 <body>
     <img width="1000" height="700"   src="/FOTOS/foto hombres caminando.jpg" alt="El hombre de hoy">
