--- a/Html/Mujer.html
+++ b/Html/Mujer.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="/Css/Mujer.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+    rel="stylesheet"
+  />
   <title>Mujer</title>
 </head>
 <body>
