--- a/Html/Niño.html
+++ b/Html/Niño.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="/Css/Niño.css" />
-
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+    rel="stylesheet"
+  />
   <title>NIÑE</title>
 </head>
 <body>
