Cambio de colores index.

--- a/Html/Hombre.html
+++ b/Html/Hombre.html
@@ -9,16 +9,16 @@
     <title>Hombre</title></HEAd>
 <body>
     <img width="1000" height="700"   src="/FOTOS/foto hombres caminando.jpg" alt="El hombre de hoy">
-    <header><h1><U>HOMBRE</U></h1></header>
-    <H3>Ropa</H3>
-    <h3>Calzado</h3>
-    <h3>Accesorios</h3>
-    <UL>
-        <li><a href="/Html/Mujer.html">Mujer</a></li>
-        <li><a href="/Html/Niño.html">Niños</a></li>
+    <header><h1><U>Hombre</U></h1></header>
+    <H3 class="textiles">Ropa</H3>
+    <h3 class="textiles">Calzado</h3>
+    <h3 class="textiles">Accesorios</h3>
+    <UL class="links">
+        <br><li><a href="/Html/Mujer.html">Mujer</a></li>
+        <br><li><a href="/Html/Niño.html">Niños</a></li>
     </UL>
     
-    <a href="/Html/Index.html">Home</a>
+    <br><br><a href="/Html/Index.html">Home</a>
     <footer>
         <br><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
 </body>
