--- a/Html/Index.html
+++ b/Html/Index.html
@@ -13,8 +13,8 @@
     <h1 class="Titulo principal"><u>Toda La Moda Un Solo Lugar</u></h1>
 
     <img class="FOTOS"
-      width="1000"
-      height="700"
+      width="800"
+      height="560"
       src="/FOTOS/modelos mujeres.jpg"
       alt="Modelos posando"
     />
@@ -22,7 +22,7 @@
 
   <div class="secciones">
 
-    <br><u><h3>Categorias</h3></u>
+    <br><u><h2 class="secciones">Categorias</h2></u>
     <ul>
     <br><li><a class="secciones" href="/Html/Hombre.html">Hombre</a></li>
 
@@ -33,7 +33,7 @@
   </div>
 
   <footer>
-    <br><br><b><u><i class="Realizado">Realizado Por Tomas Merlo</i></u</b>
+    <br><br><b><u><i>Realizado Por Tomas Merlo</i></u</b>
   </footer>
 
 </body>
