--- a/Html/Mujer.html
+++ b/Html/Mujer.html
@@ -10,25 +10,24 @@
 </head>
 <body>
   <img
-    width="800"
-    height="600"
-    src="/FOTOS/mujeres caminado.jpg"
+    width="1000"
+    height="700"
+    src="/FOTOS/la ultima cena.jpg"
     alt="mujeres caminado"
   />
   <header>
-    <h1><u>MUJER</u></h1>
+    <h1><u>Mujer</u></h1>
   </header>
-  <h3>Ropa</h3>
-  <h3>Calzado</h3>
-  <h3>Accesorios</h3>
-  <ul>
-    <li><a href="/Html/Hombre.html">Hombre</a></li>
-    <li><a href="/Html/Niño.html">Niños</a></li>
+  <h3 class="textiles">Ropa</h3>
+  <h3 class="textiles">Calzado</h3>
+  <h3 class="textiles">Accesorios</h3>
+  <ul class="links">
+    <br><li><a href="/Html/Hombre.html">Hombre</a></li>
+    <br><li><a href="/Html/Niño.html">Niños</a></li>
   </ul>
-  <a href="/Html/Index.html">Home</a>
+  <br><br><a href="/Html/Index.html">Home</a>
   <footer>
-    <b
-      ><u><i>Realizado Por Tomas Merlo</i></u
+    <br><b><u><i>Realizado Por Tomas Merlo</i></u
       >.</b
     >
   </footer>
