--- a/Html/Niño.html
+++ b/Html/Niño.html
@@ -10,24 +10,24 @@
 </head>
 <body>
   <img
-    width="800"
-    height="600"
+    width="1000"
+    height="700"
     src="/FOTOS/ninos-modelando-ropa_930x600_11245.jpg"
     alt="Niños posando"
   />
   <header>
-    <h1><u>NIÑOS</u></h1>
+    <h1><u>Niños</u></h1>
   </header>
 
   <h3 class="textiles">Ropa</h3>
   <h3 class="textiles">Calzado</h3>
   <h3 class="textiles">Accesorios</h3>
 
-  <ul>
+  <ul class="links">
     <br><li><a href="/Html/Hombre.html">Hombre</a></li>
     <br><li><a href="/Html/Mujer.html">Mujer</a></li>
   </ul>
-  <br><a href="/Html/Index.html">Home</a>
+  <br><br><a href="/Html/Index.html">Home</a>
   <footer>
     <b
       ><br><u><i>Realizado Por Tomas Merlo</i></u
