Cambios en la distribucion de el texto en todas las paginas.

--- a/Html/Index.html
+++ b/Html/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1 class="Titulo principal"><u>Toda La Moda Un Solo Lugar</u></h1>
+    <h1 class="Titulo principal"><u>Summer Season 2021</u></h1>
 
     <img class="FOTOS"
       width="800"
@@ -19,6 +19,8 @@
       alt="Modelos posando"
     />
   </header>
+
+
 
   <div class="secciones">
 
