Nuevos botones en todas las paginas.

--- a/Html/Index.html
+++ b/Html/Index.html
@@ -24,18 +24,17 @@
 
   <div class="secciones">
 
-    <br><u><h2 class="secciones">Categorias</h2></u>
-    <ul>
-    <br><li><a class="secciones" href="/Html/Hombre.html">Hombre</a></li>
+    <br><u><button id="boton-cat"><h2>Categorias</h2></button></u>
 
-    <br><li><a class="secciones" href="/Html/Mujer.html">Mujer</a></li>
-
-    <br><li><a class="secciones" href="/Html/Niño.html">Niños</a></li>
+    <ul id="container-categorias" class="categorias">
+    
+    
   </ul>
   </div>
 
   <footer>
     <br><br><b><u><i>Realizado Por Tomas Merlo</i></u</b>
   </footer>
-
+<script src="/Script/Dom.js"></script>
 </body>
+</html>
