--- a/Html/Hombre.html
+++ b/Html/Hombre.html
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
-<HEAd>
-    <link rel="stylesheet" href="/Css/Hombre.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+<html>
+<head>
+  <link rel="stylesheet" href="/Css/Hombre.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
     rel="stylesheet"
   />
-    <title>Hombre</title></HEAd>
+  <title>Hombre</title>
+</head>
 <body>
-    <img width="1000" height="700"   src="/FOTOS/foto hombres caminando.jpg" alt="El hombre de hoy">
-    <header><h1><U>Hombre</U></h1></header>
-    <H3 class="textiles">Ropa</H3>
-    <h3 class="textiles">Calzado</h3>
-    <h3 class="textiles">Accesorios</h3>
-    <UL class="links">
-        <br><li><a href="/Html/Mujer.html">Mujer</a></li>
-        <br><li><a href="/Html/Niño.html">Niños</a></li>
-    </UL>
+
+  <div class="fotoshombre">
     
-    <br><br><a href="/Html/Index.html">Home</a>
-    <footer>
-        <br><b><u><i>Realizado Por Tomas Merlo</i></u>.</b></footer>
+    <img
+      class="tamanoimagen"
+      src="/FOTOS/foto hombres caminando.jpg"
+      alt="El hombre de hoy"
+    />
+  </div>
+  <header><h1>Hombre</h1></header>
+    <br><button id="boton-ropa"><h3 class="textiles">Ropa</h3></button>
+<div>
+  <ul id="catropa" class="dalee">
+    <li><h3>Remeras</h3></li>
+    <li><h3>Pantalones</h3></li>
+    <li><h3>Camperas</h3></li>
+  </ul>
+</div>
+
+
+  <br><button id="boton-calzado"><h3 class="textiles">Calzado</h3></button>
+  <div>
+    <ul id="cattextiles" class="shoes">
+      <li><h3>Zapatillas</h3></li>
+      <li><h3>Botas</h3></li>
+      <li><h3>Sandalias</h3></li>
+    </ul>
+  </div>
+
+  <br><button id="boton-accesorios"><h3 class="textiles">Accesorios</h3></button>
+  <div>
+    <ul id="cataccesorios" class="accesorios">
+      <li><h3>Sombreros</h3></li>
+      <li><h3>Cinturones</h3></li>
+      <li><h3>Medias</h3></li>
+    </ul>
+  </div>
+  
+  <br><ul class="links">
+    <br />
+    <li><a href="/Html/Mujer.html">Mujer</a></li>
+    <br />
+    <li><a href="/Html/Niño.html">Niños</a></li>
+  </ul>
+
+  <br /><br /><a href="/Html/Index.html">Home</a>
+  <footer>
+    <br /><b
+      ><u><i>Realizado Por Tomas Merlo</i></u
+      >.</b
+    >
+  </footer>
+  <script src="/Script/hombre.js"></script>
 </body>
+</html>
