--- a/Html/Mujer.html
+++ b/Html/Mujer.html
@@ -18,9 +18,34 @@
   <header>
     <h1><u>Mujer</u></h1>
   </header>
-  <h3 class="textiles">Ropa</h3>
-  <h3 class="textiles">Calzado</h3>
-  <h3 class="textiles">Accesorios</h3>
+  <button id="boton-ropa"><h3 class="textiles">Ropa</h3></button>
+<div>
+  <ul id="catropa" class="dalee">
+    <li><h3>Remeras</h3></li>
+    <li><h3>Pantalones</h3></li>
+    <li><h3>Camperas</h3></li>
+  </ul>
+</div>
+
+
+  <br><button id="boton-calzado"><h3 class="textiles">Calzado</h3></button>
+  <div>
+    <ul id="cattextiles" class="shoes">
+      <li><h3>Zapatillas</h3></li>
+      <li><h3>Botas</h3></li>
+      <li><h3>Sandalias</h3></li>
+    </ul>
+  </div>
+
+  <br><button id="boton-accesorios"><h3 class="textiles">Accesorios</h3></button>
+  <div>
+    <ul id="cataccesorios" class="accesorios">
+      <li><h3>Sombreros</h3></li>
+      <li><h3>Cinturones</h3></li>
+      <li><h3>Medias</h3></li>
+    </ul>
+  </div>
+
   <ul class="links">
     <br><li><a href="/Html/Hombre.html">Hombre</a></li>
     <br><li><a href="/Html/Niño.html">Niños</a></li>
@@ -31,4 +56,5 @@
       >.</b
     >
   </footer>
+  <script src="/Script/mujer.js"></script>
 </body>
