--- a/Html/Index.html
+++ b/Html/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <title>Tienda Online</title>
   <link rel="stylesheet" href="/Css/Estilos pagina.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -9,8 +10,42 @@
   />
 </head>
 <body>
+  <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Forever 7</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/Html/Index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Categorias
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/Html/Hombre.html">Hombre</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/Html/Mujer.html">Mujer</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/Html/Niño.html">Niños</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </nav>
+  
   <header>
-    <h1 class="Titulo principal"><u>Summer Season 2021</u></h1>
+    <h1 class="Titulo principal"><u>Forever 7</u></h1>
 
     <img class="FOTOS"
       width="800"
@@ -36,5 +71,6 @@
     <br><br><b><u><i>Realizado Por Tomas Merlo</i></u</b>
   </footer>
 <script src="/Script/Dom.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
